tests/e2e/fail/while_keyword_removed.ep
# COMPILE_ERROR: Unexpected token in statement
fun main(): void {
    while true {
    }
}
